# tarantino

./: .gitignore  LICENSE  README.md  build-output.txt  debug-editor.html  editor.html  index.html  package.json  pnpm-lock.yaml  preview.html  recording-hud.html  tailwind.config.js  test-permissions.js  vite.config.ts  webcam.html  webgl-preview-bridge.js
src-tauri/: Cargo.toml  Info.plist  build.rs  dev-runner.sh  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  editor.json  hud.json  webcam.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_zoom.rs  capture_commands.rs  cursor_renderer.rs  ffmpeg_manager.rs  main.rs  mouse_tracking.rs  permissions.rs  post_processing.rs  recording_commands.rs  sidecar.rs  webcam.rs  zoom_preview.rs
src-tauri/src/auto_zoom/: typing_zoom.rs
src-tauri/src/capture/: mod.rs
src-tauri/src/capture/backends/: mod.rs
src-tauri/src/commands/: capture.rs  cursor.rs  device.rs  display_preview.rs  export_pipeline.rs  hud.rs  input.rs  lifecycle.rs  misc.rs  mod.rs  mouse.rs  preview.rs  processing.rs  recording_control.rs  tray.rs  video.rs  video_validation.rs  zoom.rs
src-tauri/src/cursor_engine/: mod.rs  motion_analyzer.rs  pattern_detector.rs  zoom_calculator.rs
src-tauri/src/cursor_engine/zoom_calculator/: smoothing.rs  types.rs
src-tauri/src/cursor_renderer/: simulation.rs
src-tauri/src/encoder/: mod.rs
src-tauri/src/encoder/macos/: ffi.rs  mod.rs  vt_encoder.mm  vt_encoder_session.inc.mm
src-tauri/src/event_capture/: mod.rs
src-tauri/src/export/: compositor.rs  effects.rs  encoder.rs  mod.rs
src-tauri/src/ffmpeg/: mod.rs  operations.rs  types.rs
src-tauri/src/muxer/: mod.rs
src-tauri/src/preview/: audio_mixer.rs  compositor.rs  mod.rs  project_loader.rs  textures.rs  timeline_resolver.rs  types.rs  uniforms.rs
src-tauri/src/preview/shaders/: compositor.wgsl
src-tauri/src/recording/: encoder_loop.rs  finalization.rs  mod.rs  types.rs
src-tauri/src/state/: app.rs  devices.rs  mod.rs  mouse_state.rs  persistence.rs  recording.rs  ui.rs
src-tauri/src/video_processing/: audio_export.rs  codec_config.rs  cursor_compositing.rs  cursor_trajectory.rs  export.rs  gpu_compositor.rs  metadata.rs  mod.rs  processor.rs  thumbnails.rs  types.rs  visual_effects.rs  zoom_expressions.rs  zoom_trajectory.rs
(+103 files in other folders)
