[package]
name = "tarantino"
version = "0.1.0"
authors = ["Tarantino Contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }
cc = "1.0"

[dependencies]
tauri = { version = "2.9.0", features = [ "tray-icon", "protocol-asset", "macos-private-api", "unstable"] }
tauri-plugin-decorum = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
# GPU compositor and rendering
wgpu = "0.19"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
image = "0.24"
imageproc = "0.23"  # Drawing shapes for cursor rendering
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
dashmap = "5.5"
crossbeam-channel = "0.5"
once_cell = "1.19"
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
num_cpus = "1.16"

# Audio processing
cpal = "0.15"

# Mouse tracking - native cursor events
rdev = { git = "https://github.com/fufesou/rdev" }

# Event capture
uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"

# Video processing - Modern native bindings using ffmpeg-next
ffmpeg-next = "8.1"

# Screen capture and encoding
bytes = "1.5"
futures = "0.3"
async-trait = "0.1"

# Video container muxing
mp4 = "0.14"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-graphics = "0.23"
objc = "0.2"
objc-foundation = "0.1"
cocoa = "0.25"
# Hardware acceleration and modern capture
metal = "0.27"
dispatch = "0.2"
# ScreenCaptureKit bridge
block = "0.1"
core-media = "0.1"
core-video = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12", 
    "Win32_Graphics_Dxgi",
    "Win32_System_WinRT",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media_MediaFoundation",
    # Windows Graphics Capture will be added when implementing the real WGC code
    "Win32_System_Com",
] }

[target.'cfg(target_os = "linux")'.dependencies]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
